nGrid added html generator, navigation

--- a/assets/scss/common/_page.scss
+++ b/assets/scss/common/_page.scss
@@ -1,5 +1,8 @@
 body {
-    background-color: $page-bg-color;
+	background-color: $page-bg-color;
+}
+
+body, button, input {
     font: 14px/22px "Trebuchet MS", Tahoma, sans-serif;
     color: $default-font-color;
 }
