--- a/assets/scss/ngrid/_body.scss
+++ b/assets/scss/ngrid/_body.scss
@@ -4,32 +4,42 @@
 	min-height: 138px;
 	max-height: 464px;
 	overflow: scroll;
+
+	white-space: nowrap;
+	font-size: 0;
 }
 
 .ngrid__body {
 
+	@include display-inline-block;
 }
 
 .ngrid__row {
-	white-space: nowrap;
 
 	&:nth-child(even) {
 		background: $grid-row-even-bg-color;
 	}
 }
 
-.ngrid__row_last {
-
-	.ngrid__cell__container {
-		margin-bottom: 60px;
-	}
-}
-
 .ngrid__cell {
+	height: 30px;
+	line-height: 30px;
+	border-right: 1px solid $grid-body-border-color;
+	border-bottom: 1px solid $grid-body-border-color;
+	padding: 0 8px;
+	overflow: hidden;
 	cursor: default;
+
+	text-overflow: ellipsis;
+	font-size: 14px;
+
+	@include box-sizing(border-box);
+	@include display-inline-block;
 
 	.ngrid_disabled & {
 		background-color: #F0F0F0;
+
+		color: #808080;
 	}
 
 	&.disabled {
@@ -52,33 +62,6 @@
 		.ngrid__cell__textvalue {
 			color: #fff !important;
 		}
-	}
-}
-
-.ngrid__cell__container {
-	height: 30px;
-	line-height: 30px;
-	border-right: 1px solid $grid-body-border-color;
-	border-bottom: 1px solid $grid-body-border-color;
-
-	@include box-sizing(border-box);
-}
-
-.ngrid__cell__textvalue {
-	overflow: hidden;
-	padding: 0 8px;
-
-	.ngrid_disabled & {
-		color: #808080;
-	}
-}
-
-.ngrid__cell__editor {
-
-	input {
-		width: 100%;
-		height: 29px;
-		padding: 0 8px;
 	}
 }
 
