--- a/assets/scss/ngrid/_body.scss
+++ b/assets/scss/ngrid/_body.scss
@@ -10,6 +10,7 @@
 }
 
 .ngrid__body {
+	position: relative;
 
 	@include display-inline-block;
 }
@@ -18,6 +19,10 @@
 
 	&:nth-child(even) {
 		background: $grid-row-even-bg-color;
+	}
+
+	&:last-child {
+		margin-bottom: 40px;
 	}
 }
 
