confirm popup added

--- a/assets/scss/common/_btns.scss
+++ b/assets/scss/common/_btns.scss
@@ -27,7 +27,7 @@
     &.disabled {
         background: #aaa !important;
         border-color: #aaa !important;
-		color: #333 !important;
+		color: #fff !important;
     }
 }
 
