changed Grid methods structure

--- a/assets/jade/index.jade
+++ b/assets/jade/index.jade
@@ -28,3 +28,5 @@ html(ng-app="nGridTWMSApp", id="nGridTWMSApp")
 
 		div(style="width: 1000px;")
 			n-grid(options="gridOptions")
+
+		include _ngrid-templates
