fixed NGrid - added more cloning to objects and arrays

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -1,4 +1,5 @@
 @import "compass";
 @import "modules/all";
-@import "common/all";
+@import "_common/all";
+@import "_libs/all";
 @import "ngrid/all";
