--- a/assets/jade/_ngrid-templates.jade
+++ b/assets/jade/_ngrid-templates.jade
@@ -6,3 +6,6 @@ script(type="text/ng-template" id="modal-with-grid.html")
 
 script(type="text/ng-template" id="modal-with-form.html")
 	input(ng-model="value")
+
+script(type="text/ng-template" id="list-modal-instance.html")
+	n-grid.modal-grid(options='gridOptions')
